tests/baselines/reference/libTypeScriptSubfileResolvingConfig.errors.txt
/somepath/index.ts(2,10): error TS2304: Cannot find name 'DOMIterable'.


==== /somepath/tsconfig.json (0 errors) ====
    { }
==== /somepath/index.ts (1 errors) ====
    /// <reference lib="dom.iterable" />
    const a: DOMIterable = { abc: "Hello" }
             ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'DOMIterable'.
    
    // This should fail because libdom has been replaced
    // by the module above ^
    window.localStorage
    
==== /somepath/node_modules/@typescript/lib-dom/index.d.ts (0 errors) ====
    // NOOP
==== /somepath/node_modules/@typescript/lib-dom/iterable.d.ts (0 errors) ====
    interface DOMIterable { abc: string }